unified_tests/interfaces/interface_typed_binding_requires_implements/expect/build.text.stderr
lib.copp:13:26: error: type mismatch: expected Named, got User
      named: Named := User { value: "Ada" }
                           ^
